# IDs-to-DSSP

./: LICENSE  README.md  pyproject.toml
docs/: dssp.md  mkdssp_api.md  pdb.md  pipeline.md  processing.md  rs_dssp.md
notebooks/: I2D_Colab_Demo.ipynb
save/docs/: mkdssp.md  pdb.md
save/src/ids_to_dssp/: mkdssp.py  processing.py  rs_dssp.py
src/: pipeline.py
src/ids_to_dssp/: __init__.py  dssp.py  mkdssp_api.py  pdb.py  pipeline.py  processing.py  rs_dssp.py
src/ids_to_dssp/dssp/: mkdssp.py
src/ids_to_dssp/pdb/: pdb.py
src/ids_to_dssp/processing/: df.py
tests/: test_df.py
